--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -20,4 +20,8 @@
     </div>
   {{/list}}
   </div>
+  {{^list}}
+  <div class="container no-list">
+  <h2>Pet não encontrado</h2></div>
+  {{/list}}
 {{>partials/footer}}
